      source. For instance, list or show-template tasks when --workdir is provided.
    - Backup task now allows disabling of the automatic workdir rollover mechanism using the --no-rollover option. This
      is useful when the backup directory is being managed by an external version control tool (e.g. git).


Sastre 0.37 [April 21, 2020]
============================

Fixes:
    - Restore task with --attach option when one or more WAN Edges or vSmarts are offline would show a warning that the
      template attach failed, even though it was successfully attached (with sync pending for offline devices).
      Similarly, if one or more vSmarts are offline vSmart policy would not be activated (with sync pending).
      This has been fixed.


Sastre 0.36 [April 10, 2020]
============================

Enhancements:
    - Validated support for vManage 20.1 and included new API endpoints:
        - Policy lists: media profile, translation profile, translation rules, supervisory disconnect, FQDN
        - Policy definitions: Dial peer, SRST phone profile, FXS port, FXO port, FXS-DID port, SSL decryption, SSL UTD profile
        - Voice policies, custom application policies
    - New API model versioning scheme to restrict REST API queries to only the endpoints supported by the target vManage.
    - User is now prompted for vManage address, username or password if they are not provided via command line or environment variables.


Sastre 0.35 [Mar 3, 2020]
==========================

Enhancements:
    - Backup task now also backup device certificates when the 'all' tag is used. The restore task does not restore
      certificates.
    - New certificate task, allowing device certificate validity status to be restored from a backup or set to a
      desired value (i.e. valid, invalid or staging).
    - List task now contains two sub-modes: configuration or certificate. List configuration works the same way as on